fix submit spinner so it doesn't go offscreen and resizes with javascript gracefully
I tried as I may to do it with plain HTML and CSS, but alas, it wasn't powerful enough.
Javascript FTW

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,8 @@ the CSS after Martin's CSS is by html5up.net
   position-try-fallbacks: none; 
   /*horizontal-align: left;*/
 
+  margin-left: 0.5rem;
+
   vertical-align: middle; /* Stops the "baseline shift" */
   border: 16px solid gold; /* pure white to match html5up */
   border-top: 16px solid #ffffff; /* Warning Light gold */
